name:                hsio
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hsio#readme
license:             BSD3
license-file:        LICENSE
author:              Weerasak Chongnguluam
maintainer:          singpor@gmail.com
copyright:           2017 Weerasak Chongnguluam
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable hsio
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , time
                     , split
  default-language:    Haskell2010

test-suite hsio-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hsio
